세부페이지 데이터 연동

--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,11 @@
 .paddingNavbar {
   margin-bottom: 20px;
 }
+
+.shoeImgs {
+  filter: brightness(1);
+}
+
+.shoeImgs:hover {
+  filter: brightness(0.5);
+}
